# rust-sample-project

./: .env  Cargo.toml  Rocket.toml  database.sql
.sqlx/: query-8518385ad4b158382bb1f596be3ec3838bfc3870c2423796d57ea0448c98f645.json
src/: main.rs
