[package]
name = "RustSampleProject"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = "0.5.1"
reqwest = { version = "0.12.5", features = ["json"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "mysql", "chrono"] }
chrono = "0.4.38"

[dependencies.rocket_db_pools]
version = "0.2.0"
features = ["sqlx_mysql"]